# reladiff

./: CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  readthedocs.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  ci_full.yml
dev/: _bq_import_csv.py  graph.py  prepare_db.pql
docs/: Makefile  conf.py  how-to-use.md  index.rst  install.md  make.bat  new-database-driver-guide.rst  python-api.rst  requirements.txt  supported-databases.md  technical-explanation.md
reladiff/: __init__.py  __main__.py  config.py  diff_tables.py  hashdiff_tables.py  info_tree.py  joindiff_tables.py  parse_time.py  query_utils.py  table_segment.py  thread_utils.py  tracking.py  utils.py
reladiff/databases/: __init__.py  _connect.py  base.py  bigquery.py  clickhouse.py  databricks.py  duckdb.py  mysql.py  oracle.py  postgresql.py  presto.py  redshift.py  snowflake.py  trino.py  vertica.py
tests/: common.py  test_api.py  test_cli.py  test_config.py  test_database_types.py  test_diff_tables.py  test_joindiff.py  test_parse_time.py  test_postgresql.py
