[tool.poetry]
name = "reladiff"
version = "0.4.0"
description = "Command-line tool and Python library to efficiently diff rows across two different databases."
authors = ["Erez Shinan <erezshin@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/erezsh/reladiff"
documentation = "https://reladiff.readthedocs.io/en/latest/"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed"
]
packages = [{ include = "reladiff" }]

[tool.poetry.dependencies]
python = "^3.8"
runtype = "^0.4.2"
dsnparse = "*"
click = "^8.1"
rich = "*"
toml = "^0.10.2"
sqeleton = "0.1.0"
# sqeleton = {path="../sqeleton", develop=true}
mysql-connector-python = {version="8.0.29", optional=true}
psycopg2 = {version="*", optional=true}
snowflake-connector-python = {version="^2.7.2", optional=true}
cryptography = {version="*", optional=true}
trino = {version="^0.314.0", optional=true}
presto-python-client = {version="*", optional=true}
clickhouse-driver = {version="*", optional=true}
duckdb = {version="^0.6.0", optional=true}

[tool.poetry.dev-dependencies]
parameterized = "*"
unittest-parallel = "*"
# preql = "^0.2.19"
mysql-connector-python = "*"
psycopg2 = "*"
snowflake-connector-python = "^2.7.2"
cryptography = "*"
trino = "^0.314.0"
presto-python-client = "*"
clickhouse-driver = "*"
vertica-python = "*"
duckdb = "^0.6.0"
# google-cloud-bigquery = "*"
# databricks-sql-connector = "*"

[tool.poetry.extras]
# When adding, update also: README + dev deps just above
preql = ["preql"]
mysql = ["mysql-connector-python"]
postgresql = ["psycopg2"]
snowflake = ["snowflake-connector-python", "cryptography"]
presto = ["presto-python-client"]
oracle = ["cx_Oracle"]
# databricks = ["databricks-sql-connector"]
trino = ["trino"]
clickhouse = ["clickhouse-driver"]
vertica = ["vertica-python"]
duckdb = ["duckdb"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
reladiff = 'reladiff.__main__:main'
